--- a/scss/components-editnote-form.scss
+++ b/scss/components-editnote-form.scss
@@ -1,9 +1,11 @@
 .editnote-form {
   .keywords {
     display: flex;
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
 
     > .icon {
-      margin-top: 1.2rem;
+      margin-top: 1rem;
       margin-left: .9rem;
     }
 
